docs: :memo: update docs

--- a/packages/docs/src/assets/styles/global.css
+++ b/packages/docs/src/assets/styles/global.css
@@ -23,11 +23,44 @@
         @apply font-semibold bg-primary-600 text-white border-primary-600 hover:bg-primary-800 hover:border-primary-800 hover:text-white dark:text-white dark:bg-primary-700 dark:border-primary-700 dark:hover:border-primary-900 dark:hover:bg-primary-900;
     }
 
+    .slot h1 {
+        @apply mb-2 font-semibold text-2xl;
+    }
+
+    .slot h2 {
+        @apply mb-2 font-semibold text-lg;
+    }
+
+    .slot h3 {
+        @apply mb-2 font-semibold text-base;
+    }
+
+    .slot code {
+        @apply bg-slate-100 dark:bg-slate-800 p-1 px-2 rounded w-full;
+    }
+
+    .slot pre {
+        @apply w-full flex my-2;
+    }
+
+    .slot a {
+        @apply text-sky-900 font-medium dark:text-sky-400;
+    }
+
+    .slot hr {
+        @apply my-5;
+    }
+
     [data-aw-toggle-menu] path {
         @apply transition;
     }
     [data-aw-toggle-menu].expanded g > path:first-child {
         @apply -rotate-45 translate-y-[15px] translate-x-[-3px];
+    }
+
+    p,
+    li {
+        @apply mt-2 text-sm text-slate-700 dark:text-slate-400;
     }
 
     [data-aw-toggle-menu].expanded g > path:last-child {
