--- a/packages/docs/src/assets/styles/global.css
+++ b/packages/docs/src/assets/styles/global.css
@@ -29,23 +29,23 @@
     }
 
     .slot h2 {
-        @apply my-2 font-semibold text-xl;
+        @apply mt-4 font-semibold text-xl;
     }
 
     .slot h3 {
-        @apply my-2 font-semibold text-lg;
+        @apply mt-4 font-semibold text-lg;
     }
 
     .slot code {
-        @apply bg-slate-100 dark:bg-slate-800 p-1 px-2 rounded w-full text-sm;
+        @apply text-xs font-mono;
     }
 
     .slot pre {
-        @apply w-full flex my-2;
+        @apply bg-gray-800 dark:bg-slate-800 p-3 rounded w-full text-gray-100 w-full flex my-2;
     }
 
     .slot a {
-        @apply text-sky-900 font-medium dark:text-sky-400;
+        @apply text-sky-900 font-medium dark:text-sky-400 dark:hover:text-white;
     }
 
     .slot hr {
@@ -54,6 +54,10 @@
 
     .slot img {
         @apply rounded drop-shadow-2xl;
+    }
+
+    .slot ul {
+        @apply list-disc pl-5;
     }
 
     [data-aw-toggle-menu] path {
@@ -66,6 +70,10 @@
     p,
     li {
         @apply mt-2 text-sm text-slate-700 dark:text-slate-400;
+    }
+
+    .coding p {
+        @apply m-0;
     }
 
     [data-aw-toggle-menu].expanded g > path:last-child {
