--- a/packages/docs/src/assets/styles/global.css
+++ b/packages/docs/src/assets/styles/global.css
@@ -6,10 +6,10 @@
  *
  */
 
+@import url('./fonts.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('./fonts.css');
 
 @layer components {
     .btn {
@@ -36,12 +36,16 @@
         @apply mt-4 font-semibold text-lg;
     }
 
-    .slot code {
-        @apply text-xs font-mono;
+    .slot p code {
+        @apply text-xs font-mono bg-stone-100 dark:bg-slate-600 dark:text-white text-red-500 p-1 rounded-sm;
     }
 
     .slot pre {
-        @apply bg-gray-800 dark:bg-slate-800 p-3 rounded w-full max-w-lg text-gray-100  flex my-2;
+        @apply w-full  flex my-2;
+    }
+
+    .slot pre code {
+        @apply p-3 rounded-sm min-w-[32rem]   w-fit bg-gray-800 dark:bg-slate-800  text-gray-100 text-xs;
     }
 
     .slot a {
@@ -53,7 +57,7 @@
     }
 
     .slot img {
-        @apply rounded drop-shadow-2xl;
+        @apply rounded-sm drop-shadow-2xl;
     }
 
     .slot ul {
