--- a/packages/docs/src/assets/styles/global.css
+++ b/packages/docs/src/assets/styles/global.css
@@ -47,6 +47,9 @@
         @apply p-3 rounded md:w-full max-w-screen-md overflow-x-auto w-fit bg-gray-800 dark:bg-slate-800 ease-in duration-75 text-gray-100 text-xs shadow-xl;
     }
 
+    .slot iframe {
+        @apply rounded   ease-in duration-75 text-gray-100 text-xs shadow-xl;
+    }
     .slot a {
         @apply text-sky-900 font-medium dark:text-sky-400 dark:hover:text-white;
     }
